@@ -1433,6 +1433,9 @@ public class Table implements TableOrView, TableSchema, Closeable {
 
     @Override
     public long findFirstDate(long columnIndex, Date date) {
+        if (date == null) {
+            throw new IllegalArgumentException("null is not supported");
+        }
         return nativeFindFirstDate(nativePtr, columnIndex, date.getTime() / 1000);
     }
 
@@ -1440,6 +1443,9 @@ public class Table implements TableOrView, TableSchema, Closeable {
 
     @Override
     public long findFirstString(long columnIndex, String value) {
+        if (value == null) {
+            throw new IllegalArgumentException("null is not supported");
+        }
         return nativeFindFirstString(nativePtr, columnIndex, value);
     }
 
